Source/WebKit/mac/WebCoreSupport/WebChromeClient.h
@@ -180,7 +180,7 @@ public:
     virtual PassRefPtr<WebCore::SearchPopupMenu> createSearchPopupMenu(WebCore::PopupMenuClient*) const;
 
 #if ENABLE(CONTEXT_MENUS)
-    virtual void showContextMenu() { }
+    virtual void showContextMenu();
 #endif
 private:
     WebView *m_webView;
